--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,7 @@ services:
       - 'POSTGRES_PASSWORD=postgres'
       - 'POSTGRES_USER=postgres'
     ports:
-      - '5432:5432'
+      - '5435:5432'
+    volumes:
+      - ./database/sql:/docker-entrypoint-initdb.d
 
