--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,5 +8,5 @@ services:
     ports:
       - '5435:5432'
     volumes:
-      - ../../.database/sql:/docker-entrypoint-initdb.d
+      - .database/sql:/docker-entrypoint-initdb.d
 
